# ereader

./: .gitignore  README.md  debugContainer.sh  deploy.sh  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  parameters.json  template.json
backend/: .env  Dockerfile  Dockerfile.dev  Dockerfile.prod  data.db  pyproject.toml
backend/app/: auth.py  auth_backend.py  database.py  main.py  models.py  schemas.py  users.py
backend/app/routes/: auth.py  books.py  chat.py  checkout.py  webhook.py
backend/app/scripts/: bulkUpload.py  ebookExtraction.py  instantiateDb.py
backend/app/services/: storage.py
backend/scripts/: bulkUpload.py  inspect.ipynb
backend/uploads/4/: Americas Great Depression_3.epub
frontend/: .env  Dockerfile  Dockerfile.dev  Dockerfile.prod  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/nginx/: nginx.conf
frontend/nginx/certs/: options-ssl-nginx.conf
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: subscription.ts  user.ts
frontend/src/components/: ChatInput.tsx  ChatWindow-old.tsx  ChatWindow.tsx  ProfileDropdown.tsx
frontend/src/components/chat/: ChatMessage.tsx  ChatWindow.tsx  ScrollToBottom.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useCurrentUser.ts  useEpub.ts
frontend/src/pages/: BillingCancelPage.tsx  BillingSuccessPage.tsx  LibraryPage.tsx  LoginPage.tsx  ProfilePage.tsx  ReaderPage-html-injection.tsx  ReaderPage.tsx  RegisterPage.tsx
frontend/src/test-epub/: pg18569-images-3.epub
scripts/: bulkUpload.py
