[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "azure-storage-blob>=12.25.1",
 "bcrypt>=4.3.0",
 "bleach>=6.2.0",
 "ebooklib>=0.19",
 "fastapi[standard]>=0.115.12",
 "passlib>=1.7.4",
 "psycopg2-binary>=2.9.10",
 "python-jose>=3.4.0",
 "redis>=6.0.0",
 "sqlalchemy>=2.0.40",
]

[project.optional-dependencies]
dev = ["black>=24.10.0", "mypy>=1.14.1", "flake8>=7.1.1", "isort>=5.13.2"]
